added methods in class

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>tamaguchi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
+<div class="wrapper-dog">
+    <!--<img src="image/greeting.jpg" class="greeting-dog" id="dog" onclick="greeting" alt="greeting">-->
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
