--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <title>tamaguchi</title>
+    <title>Tamagotchi</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="wrapper-dog">
-    <!--<img src="image/greeting.jpg" class="greeting-dog" id="dog" onclick="greeting" alt="greeting">-->
+    <img src="image/happy.jpg" class="greeting-dog" alt="dog">
 </div>
 <script src="js/main.js"></script>
 </body>
